@@ -9,7 +9,7 @@ earlier versions.
 
 jEdit comes with full online help; to read it, select 'jEdit Help' from
 jEdit's 'Help' menu or point your web browser to the file named
-`index.html' in the `doc/users-guide/' directory of the jEdit
+'index.html' in the 'doc/users-guide/' directory of the jEdit
 distribution.
 
 A PDF (Adobe Acrobat) version of the user's guide be downloaded from
@@ -48,7 +48,7 @@ user-oriented site, <http://community.jedit.org>. Check it out.
 If you would like to report a bug, first take a look at the 'jEdit
 Frequently Asked Questions' document, accessible from either jEdit's
 online help or by pointing your web browser to the file named
-`index.html' in the `doc/FAQ/' directory of the jEdit distribution.
+'index.html' in the 'doc/FAQ/' directory of the jEdit distribution.
 
 If the FAQ doesn't answer your question, report a bug with our bug
 tracker, located at <http://www.jedit.org/?page=feedback>.
@@ -76,3 +76,32 @@ can use the IRC plugin, available from <http://plugins.jedit.org>, for
 this purpose.
 
 You may also e-mail me directly by e-mailing <slava@jedit.org>.
+
+* Libraries
+
+jEdit depends on, and comes bundled with the following libraries:
+
+- gnu.regexp by the Free Software Foundation. jEdit bundles the
+  gnu.regexp 1.1.5 CVS snapshot.
+
+  gnu.regexp is released under the 'GNU Lesser General Public License'.
+  The gnu.regexp homepage is <http://www.cacas.org/java/gnu/regexp/>.
+
+- AElfred XML parser by Microstar corporation. This class library is
+  released under its own, non-GPL license, which reads as follows:
+
+  "AElfred is free for both commercial and non-commercial use and
+  redistribution, provided that Microstar's copyright and disclaimer are
+  retained intact.  You are free to modify AElfred for your own use and
+  to redistribute AElfred with your modifications, provided that the
+  modifications are clearly documented."
+
+  The AElfred home page is located at <http://www.microstar.com>.
+
+- BeanShell scripting language, by Pat Niemeyer. jEdit bundles BeanShell
+  version 1.2b7 with the bsh.util and bsh.classpath packages removed.
+
+  BeanShell is released under a dual Sun Public License/GNU LGPL
+  license. See the BeanShell homepage for details.
+
+  The BeanShell homepage is located at <http://www.beanshell.org>.
